[package]
name = "testgtk"
version = "0.1.0"
authors = ["Craig Prevallet <penguintx@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glib = "0.10.3"
chrono = "0.4.0"
public-ip = "0.2.0"
tokio = { version = "1", features = ["full"] }
maxminddb = "0.18"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
